# svg

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml  test.yml
examples/: compose.rs  parse.rs  path.rs
src/: composer.rs  document.rs  error.rs  file.rs  lib.rs  macros.rs  node.rs  parser.rs  path.rs  reactor.rs  reader.rs  result.rs  tag.rs  text.rs  value.rs  writer.rs
src/element/: mod.rs  path.rs  svg.rs  value.rs
src/element/path/: command.rs  data.rs  mod.rs  parameter.rs  parameters.rs
src/node/: blob.rs  comment.rs  mod.rs  text.rs  value.rs
src/node/element/: mod.rs  tag.rs
src/node/element/path/: command.rs  data.rs  euclid.rs  mod.rs  parameters.rs
src/parser/: error.rs  mod.rs  reader.rs  tag.rs
src/tag/: mod.rs  path.rs
