[package]
name = "svg"
version = "0.7.1"
edition = "2018"
license = "Apache-2.0/MIT"
authors = [
    "Felix Schütt <felix.schuett@maps4print.com>",
    "GeoffreyY <yeungchingho123@gmail.com>",
    "Gijs Burghoorn <g.burghoorn@gmail.com>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Nicolas Silva <nical@fastmail.com>",
    "OCTronics <octronics@riseup.net>",
    "e-matteson <e.r.matteson@gmail.com>",
]
description = "The package provides an SVG composer and parser."
documentation = "https://docs.rs/svg"
homepage = "https://github.com/bodoni/svg"
repository = "https://github.com/bodoni/svg"
readme = "README.md"
categories = ["multimedia::images", "parsing", "rendering::data-formats"]
keywords = ["vector-graphics"]
